# milksnake

./: .gitignore  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
milksnake/: __init__.py  agent.py  config.py  main.py  walkfile.py
tests/: __init__.py  test_agent.py  test_config.py  test_smoke.py  test_walkfile.py
